--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sinronizacion con git hub</title>
 </head>
-
+<style href="miestilo.css">
 <body>
     <h1>aqui iria el titulo de la pagina</h1>
     <p>esto es un parrafo</p>
